codepkg/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>AverageSalary__c</fullName>
        <formula>SumSummary__c /  CountEmployee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AverageSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountEmployee__c</fullName>
        <label>CountEmployee New</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Employee_Workflow__c</fullName>
        <label>Count Employee Workflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_director__c</fullName>
        <label>Email director</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MaxSummary__c</fullName>
        <label>MaxSummary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinSummary__c</fullName>
        <label>MinSummary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SumSummary__c</fullName>
        <label>SumSummary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>